# generator-az-ai

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
__tests__/: app.js
docs/: kickstarter_generator.excalidraw
generators/app/: index.js  prompting.js
generators/app/templates/: README.md  azure.yaml  pyproject.toml
generators/app/templates/.devcontainer/: devcontainer.json  post-create.sh
generators/app/templates/doc/decisions/: 0005-use-azure-container-registry-image-builds.md
generators/app/templates/infra/: main.bicep  main.parameters.json
generators/app/templates/scripts/: oauth2PermissionScopes.json  postprovision.sh  predown.sh  preprovision.sh
generators/app/templates/src/frontend/: requirements.txt
generators/backend/: index.js
generators/backend/templates/src/backend/: Dockerfile  orchestrator.py  pyproject.toml
generators/backend/templates/src/backend/utils/: util.py
generators/devcontainer/: index.js
generators/frontend/: index.js
generators/frontend/templates/src/frontend/: Dockerfile  app.py  pyproject.toml
generators/git-hub/: index.js
generators/package/: index.js
generators/package/templates/src/package_slug/: README.md  pyproject.toml
generators/package/templates/src/package_slug/src/package_name/: __init__.py
generators/package/templates/src/package_slug/src/tests/: test_hello.py
scripts/: hook_prompts.sh
tests/: aiggb_generator_base.py  conftest.py  dev_container.py  test_aigbb_generator.py  test_aigbb_generator_l100.py  test_aigbb_generator_l100_fast.py  test_aigbb_generator_l100_slow.py  test_aigbb_generator_l300.py  test_aigbb_generator_l300_fast.py  test_aigbb_generator_l300_slow.py  test_aigbb_generator_prompts.py  test_az_ai_generator_l100_fast.py  test_az_ai_generator_l100_slow.py  test_az_ai_generator_l300_fast.py  test_az_ai_generator_l300_slow.py  test_az_ai_generator_prompts.py
