[project]
name = "generator-aigbb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dominique Broeglin", email = "dominique.broeglin@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -p pytest_pexpect"
testpaths = [
    "tests",
]
