# Main pyproject.toml file for the project
# See https://docs.astral.sh/uv/concepts/projects/layout/ for more information
[project]
name = "<%- solutionPythonName %>"
version = "<%- solutionVersion %>"
description = "<%- solutionDescription %>"
readme = "README.md"
requires-python = ">=<%- pythonVersion %>"
dependencies = [
    "python-dotenv >=1.0.1,<1.2.0",
    "ipykernel >=6.29.5,<7.0.0",
    "ipywidgets >=8.1.5,<9.0.0",
]

<% if (solutionLevel >= 300) { -%>
[tool.uv.workspace]
members = ["src/*"]
# exclude = ["src/excluded-package"]

<% if (withPackage) { -%>
[tool.uv.sources]
<%= packageSlug %> = { workspace = true }

<% } -%>
[tool.pytest.ini_options]
#addopts = "-ra --cov"
addopts = "-ra"
pythonpath = ["src"]
<% } -%>
