[project]
name = "frontend"
version = "0.1.0"
description = "<%- solutionDescription %> - Frontend"
readme = "README.md"
requires-python = ">=<%- pythonVersion %>"
dependencies = [
    "streamlit ~=1.41.1",
    "requests ~=2.32.3",
    "azure-identity ~=1.19.0",
    "python-dotenv ~=1.0.1",
<% if (withPackage) { -%>
    "<%- packageSlug %>",
<% } -%>
]
